g_datalist_id_replace_data: Annotate the out parameter

https://bugzilla.gnome.org/show_bug.cgi?id=756470